<resources xmlns:http="http://schemas.android.com/tools">
    <string name="app_name">WBScan</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_scan">WIFI</string>
    <string name="classic_bluetooth">BLUETOOTH</string>
    <string name="action_about">About</string>
    <string name="about_text">
    <b>\nWBScan</b> - <i>Wifi and Bluetooth scanner</i>
        \nversion 1.0
    \n\nCopyright &#169; 2016 luc6
    \n\nThis program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    \n\nThis program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    \n\nYou should have received a copy of the GNU General Public License
    along with this program. If not, see http://www.gnu.org/licenses/.

        \n\nInspired by JAWS: https://github.com/jannispinter/jaws

        \n\nSource code available at: http://github.com/luc6/WBScan

    </string>
    <string name="wifi_is_disabled">Wi-Fi Disabled</string>
    <string name="wifi_is_enabled">Wi-Fi Enabled</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported.</string>

    <string name="cancelBluetoothScan">Cancel</string>
    <string name="startBluetoothScan">Start</string>
    <string name="action_exit">Exit</string>
    <string name="sound_on">turn ON</string>
    <string name="sound_off">turn OFF</string>
    <string name="choose_scan">Select the type of scan you would like to perform</string>
    <string name="action_info">Info</string>
    <string name="info_text">
       <b>\nWhat this app can do:</b>
                \n\nThis app can scan nearby wireless access points and can provide some information
                about them. Also, this app can be used for localizing APs based on signal strength.
                \n\n<i>(notice that the signal strength is reduced by obstacles and radio noise, so in most of
                the cases the APs are closer than the estimation)</i>
                \n\nThe bluetooth part of the app will provide just a detailed list of the discoverable
                bluetooth devices, without the localization feature seen on wifi scan.
        <b>\n\nWhat this app can\'t do:</b>
                \n\nThe app does not provide at this point any connectivity related options, so you cannot
                connect to other devices using this app, although this might change in the future.

        <b>\n\nTip:</b>
                \n\nUse the exit button (from the menu) to turn off Wifi and Bluetooth when you finnish.
                \n(only if Wifi or Bluetooth was enabled by this app)

        \n\nFor any suggestions, or for reporting a bug, please leave a comment at: https://github.com/luc6/WBScan/issues
        \n\nThanks.

    </string>
    <string name="signal">signal</string>
    <string name="security">security</string>
    <string name="channel">channel</string>
    <string name="bssid">bssid</string>
    <string name="ssid">ssid</string>
    <string name="SSID">SSID</string>
    <string name="BSSID">BSSID</string>
    <string name="frequency">frequency</string>
    <string name="distance">distance</string>
    <string name="rssi">rssi</string>
    <string name="bondstate">bondState</string>
    <string name="type">type</string>
    <string name="address">address</string>
    <string name="Class">class</string>
    <string name="name">name</string>
    <string name="start">Start</string>

</resources>
