<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.testapps.simpletest.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="150"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="150"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="150"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
