<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dip">

    <!-- signal -->
    <TextView
        android:id="@+id/network_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"

        android:textStyle="bold"
        android:text="@string/signal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="30dp"
        android:layout_height="220dp"
        android:max="60"
        android:progress="15"
        android:progressDrawable="@drawable/progress_drawable"
        android:indeterminate="false"
        android:layout_marginStart="35dp"
        android:layout_below="@+id/network_signal"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true" />

    <!-- SSID-->
    <TextView
        android:id="@+id/network_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SSID"
        android:textColor="#ffffff"
        android:typeface="monospace"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="135dp" />

    <!-- BSSID -->
    <TextView
        android:id="@+id/network_bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/BSSID"
        android:layout_alignStart="@+id/network_ssid"
        android:layout_below="@+id/network_ssid"
        android:layout_marginTop="25dp" />

    <!-- frequency -->
    <TextView
        android:id="@+id/network_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/frequency"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/network_bssid"
        android:layout_below="@+id/network_bssid"
        android:layout_marginTop="0dp" />

    <!-- channel -->
    <TextView
        android:id="@+id/network_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/channel"
        android:layout_alignStart="@+id/network_frequency"
        android:layout_below="@+id/network_frequency"
        android:layout_marginTop="0dp" />

    <!-- security -->
    <TextView
        android:id="@+id/network_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/security"
        android:layout_alignStart="@+id/network_channel"
        android:layout_below="@+id/network_channel"
        android:layout_marginTop="0dp" />

    <!-- distance -->
    <TextView
        android:id="@+id/network_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/distance"
        android:layout_alignStart="@+id/network_security"
        android:layout_below="@+id/network_security"
        android:layout_marginTop="25dp" />

</RelativeLayout>
