<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_scan"
            android:textStyle="bold"
            android:id="@+id/radioButton1"
            android:onClick="selectWifi"
            android:layout_weight="0.54"
            android:layout_marginBottom="33dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classic_bluetooth"
            android:textStyle="bold"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:onClick="startClassicBluetoothScan"
            android:layout_marginTop="15dp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_scan"
        android:textColor="@color/textWhiteOpacity200"
        android:textSize="11sp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
